# HUMAN.AI

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  core_architecture.md  docker-compose.yml  pyproject.toml  requirements.txt
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
api/: dependencies.py  main.py
api/routers/: documents.py
core/: config.py  graph.py  logger.py  models.py
core/database/: __init__.py  graph.py  migrations.py
core/extractor/: __init__.py  llm.py  schema.py
core/parser/: __init__.py  _backend.py  pdf.py
core/pipeline/: __init__.py  celery_app.py  status.py  tasks.py
core/schemas/: __init__.py  models.py
core/writer/: __init__.py  cypher.py  graph_writer.py
docs/: pipeline_ops.md
plans/: rnd_extractor_plan.md  schema-migrator.md
rnd/: __init__.py  smoke_test_findings.md
rnd/notebooks/: test_resume.ipynb
rnd/plan/: rnd_extractor_plan.md
rnd/src/: __init__.py  json_schema.py  openrouter_client.py  pdf_parser.py  (+1 more)
scripts/: migrate.py  queries.py  reset_document.py  seed.py
tests/: conftest.py  test_documents_api_unit.py  test_extractor_integration.py  test_extractor_schema.py  test_extractor_unit.py  test_health.py  test_infra.py  test_ingestion_e2e.py  test_migrations.py  test_models_imports.py  test_parser_integration.py  test_parser_unit.py  test_pipeline_status_unit.py  test_pipeline_task_unit.py  test_writer_integration.py  test_writer_unit.py
(+64 files in other folders)
