[project]
name = "human-ai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # Data validation
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # Graph DB
    "neo4j>=5.20",
    # Vector store
    "qdrant-client>=1.9",
    # Task queue
    "celery[redis]>=5.4",
    # Document parsing
    "pdfplumber>=0.11",
    "pypdf>=4.2",
    "python-docx>=1.1",
    # HTTP client
    "httpx>=0.27",
    # Logging
    "loguru>=0.7",
    # R&D smoke-test
    "openai>=1.40",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
